move some sections from chapter 5 to 4 (implementation)
- typed equality
- simultaneous substitution
- environment manipulation

--- a/sections/05-optimisation.tex
+++ b/sections/05-optimisation.tex
@@ -705,376 +705,7 @@ machinery that will be required in order to be able to manipulate terms and thus
 implement the transformation.
 
 
-\section{Typed Equality}
-\label{sec:equality}
-\marginnote{tk: into implementation chapter?}
-
-The Accelerate core language is richly typed, maintaining full type information
-of the embedded language in the term tree. In order to apply transformations to
-these terms while maintaining the correctness of the program as encoded in its
-type, we require methods to manipulate these richly typed terms in a type- and
-scope-preserving manner.
-
-For example, if we want to test whether two terms are equal to determine whether
-the subexpressions can be shared, we immediately run into the problem that terms
-are existentially typed:
-%
-\begin{lstlisting}[style=haskell]
-Exp s == Exp t = ??
-\end{lstlisting}
-%
-There is no reason that @s@ and @t@ should be expressions of the same
-type. In some instances we might not care, and as such can define standard
-heterogeneous equality:
-%
-\begin{lstlisting}[style=haskell]
-instance Eq (PreOpenExp acc env aenv t) where
-    (==) = heq
-    where
-        heq :: PreOpenExp acc env aenv a -> PreOpenExp acc env aenv b -> Bool
-        heq = ...
-\end{lstlisting}
-%
-where we do not care about the result type of each expression, and only require
-that the environment type, re size, of free scalar and array variables are the
-same so that we can test equality of \indext{de Bruijn} indices.
-
-However, we often \emph{do} care about the specific types of our existentially
-quantified terms. Consider the case of defining equality for let-bindings.
-Recall:
-%
-\begin{lstlisting}[style=haskell]
-data PreOpenExp acc env aenv t where
-
-  -- Local binding of a scalar expression
-  Let   :: (Elt bnd_t, Elt body_t)
-        => PreOpenExp acc env          aenv bnd_t       -- bound term
-        -> PreOpenExp acc (env, bnd_t) aenv body_t      -- body/scope of binding
-        -> PreOpenExp acc env          aenv body_t
-\end{lstlisting}
-%
-To apply @heq@ to the body expression, we need to know something about
-the type of the bound terms to ensure that the scalar environments are the same,
-namely \lstinline[style=inline,mathescape]{a $\sim$ bnd_t $\sim$ b}.%
-\footnote{Alternatively we can use \footcode{Data.Typeable.gcast} to provide a
-type-safe cast, but this quickly becomes unwieldy and is a little
-unsatisfactory.} To do this we must equip terms with a runtime witness to the
-existentially quantified type. Our reified dictionaries will allow us to do
-exactly this, so we can define heterogeneous equality for reified dictionaries:
-%
-\begin{lstlisting}[style=haskell]
-heqIntegralType :: IntegralType s -> IntegralType t -> Bool
-heqIntegralType (TypeInt _)  (TypeInt _)  = True
-heqIntegralType (TypeWord _) (TypeWord _) = True
-  ...
-heqIntegralType _            _            = False
-\end{lstlisting}
-%
-However, doing this is perfectly useless as it only gives us a value of type
-@Bool@, with no idea what that value means or to what its truth might
-entitle us. The type checker does not gain any useful knowledge about the types
-the dictionaries @a@ and @b@ witness simply by knowing that
-@heqIntegralType a b = True@. A boolean is a bit uninformative.
-
-Instead, we can write essentially the same test, but in the positive case
-deliver some \emph{evidence} that the types are equal:
-%
-\begin{lstlisting}[style=haskell]
-data s :=: t where
-  REFL :: s :=: s
-
-matchIntegralType :: IntegralType s -> IntegralType t -> Maybe (s :=: t)
-matchIntegralType (TypeInt _)  (TypeInt _)  = Just REFL
-matchIntegralType (TypeWord _) (TypeWord _) = Just REFL
-  ...
-matchIntegralType _            _            = Nothing
-\end{lstlisting}
-%
-Matching on @Just REFL@ will inject the knowledge into the type
-checker that the types @s@ and @t@ are the same. Now with our
-evidence-producing heterogeneous equality test for reified dictionary families,
-we can compare two terms and gain type-level knowledge when they witness the
-same value-level types. These witnesses for existentially quantified types then
-allow us to test for equality \emph{homogeneously}, ensuring that positive
-results from singleton tests give the bonus of unifying types for other tests:
-%
-\begin{lstlisting}[style=haskell]
-matchPreOpenExp :: PreOpenExp acc env aenv s -> PreOpenExp acc env aenv t -> Maybe (s :=: t)
-matchPreOpenExp (Let x1 e1) (Let x2 e2)
-  | Just REFL <- matchOpenExp x1 x2     -- if the bound expressions match
-  , Just REFL <- matchOpenExp e1 e2     -- then the environment of the body term will also match
-  = Just REFL
-
-matchPreOpenExp ...
-\end{lstlisting}
-
-
-\subsection{Congruence}
-
-As we are interested in the facility of matching terms for the purposes of
-optimisations such as common subexpression elimination, it is beneficial to
-define not equality but instead \indexe{congruence} of terms. Two nodes are
-considered congruent if the nodes they label are constants and the constants are
-equal; or they have the same operator and the operands are congruent. The crux
-of the latter condition refers to commutative relations, such as scalar
-addition, where an operator yields the same result when the order of the
-operands are reversed. When checking equality of primitive applications, we
-discriminate binary functions whose arguments commute, and return those
-arguments in a stable ordering by comparing a hash of each of the
-sub-terms.
-%
-\begin{lstlisting}[style=haskell]
-commutes :: PrimFun (a -> r) -> PreOpenExp acc env aenv a -> Maybe (PreOpenExp acc env aenv a)
-commutes f x = case f of
-  PrimAdd _     -> Just (swizzle x)
-    ...         -> Nothing
-  where
-    swizzle :: PreOpenExp acc env aenv (a,a) -> PreOpenExp acc env aenv (a,a)
-    swizzle exp
-      | Tuple (NilTup `SnocTup` a `SnocTup` b) <- exp
-      , hashPreOpenExp a > hashPreOpenExp b     = Tuple (NilTup `SnocTup` b `SnocTup` a)
-      | otherwise                               = exp
-\end{lstlisting}
-
-
-\section{Simultaneous Substitution}
-\label{sec:substitution}
-\marginnote{tk: into implementation chapter?}
-
-In order to do things like renaming and substitution we require a value-level
-substitution algorithm for the richly typed terms. The implementation follows
-the method of \citet{McBride:2006up,McBride:2005jv}, where it is seen that
-renaming and substitution are both instances of a \emph{single} traversal
-operation, pushing functions from variables to ``stuff'' through terms, for a
-suitable notion of stuff.
-%
-The trick is to push a \emph{type-preserving} but \emph{environment changing}
-operation structurally through terms:
-%
-\begin{lstlisting}[style=haskell]
-v :: forall t'. Idx env t' -> f env' t'
-\end{lstlisting}
-
-Where the operation differs is in the image of variables: renaming maps
-variables to variables and substitution maps variables to terms. We then lift
-this to an operation which traverses terms, with appropriate lifting to push
-under a lambda, and rebuilding the term after applying @v@ to the
-variables:
-%
-\begin{lstlisting}[style=haskell]
-rebuild :: Syntactic f
-        => (forall t'. Idx env t' -> f env' t')
-        -> Term env  t
-        -> Term env' t
-\end{lstlisting}
-
-The @Syntactic@ class\footnote{Since Accelerate is a stratified language
-there are separate implementations of this toolkit on syntactic elements for the
-scalar and collective operations, but the details are identical. The discussion
-uses the generic \footcode{Term} to mean either of these operations.} tells us
-everything we need to know about @f@ --- our notion of ``stuff'' --- in
-order to rebuild terms: a mapping in from variables, a mapping out to terms, and
-a weakening map which extends the context. Renaming will instantiate @f@
-with @Idx@, whereas for substitutions we may choose @Term@ instead.
-%
-\begin{lstlisting}[style=haskell]
-class Syntactic f where
-    varIn   :: Idx env t -> f env t             -- variables embed in f
-    termOut :: f env t   -> Term env t          -- f embeds in terms
-    weaken  :: f env t   -> f (env, s) t        -- f allows weakening
-
-instance Syntactic Idx
-instance Syntactic Term
-\end{lstlisting}
-
-A key component of this toolkit, \indexe{weakening} describes an operation we
-usually take for granted: every time we learn a new word, old sentences still
-make sense; if a conclusion is justified by a hypothesis, it is still justified
-if we add more hypotheses; a term remains in scope if we bind new (fresh)
-variables. Weakening is the process of shifting things from one scope to a
-larger scope in which new things have become meaningful, but no old things have
-vanished. When we use a named representation (or HOAS\index{higher-order
-abstract syntax}\index{HOAS|see{higher-order abstract syntax}}) we get weakening
-for free, but in the de Bruijn\index{de Bruijn} representation weakening takes
-work: we need to shift all the variable references to make room for new
-bindings. To do this we need to explain how to shift the @v@ operation into
-an extended environment; saying what to do with the new variable and how to
-account for it on the output side.
-%
-\begin{lstlisting}[style=haskell]
-shift :: Syntactic f
-      => (forall t'. Idx env t' -> f env' t')
-      -> Idx (env,  s) t
-      -> f   (env', s) t
-\end{lstlisting}
-%
-Overall, the crucial functionality of simultaneous substitution is to propagate
-a class of operations on variables closed under shifting, which is what
-@Syntactic@ and @rebuild@ offer.
-
-
-\subsection{Inlining}
-\label{sec:inlining}
-
-The final question, then, is how to write the function @v@ which we push
-through terms, as the type @forall t'@ could be anything. After all, what
-is the point of having a simultaneous substitution algorithm if we can't
-specialise it to one-at-a-time substitution.
-
-The following function takes a replacement for the top variable and returns a
-simultaneous substitution which eliminates @ZeroIdx@.
-%
-\begin{lstlisting}[style=haskell
-    ,name=inlining
-    ,caption={[A simultaneous substitution to inline terms]}]
-subTop :: Term env s -> Idx (env, s) t -> Term env t
-subTop s ZeroIdx      = s
-subTop _ (SuccIdx ix) = Var ix
-\end{lstlisting}
-%
-If we have a term with one free variable, we can use this to replace that
-variable with a term. That is, inline a term into all use sites of the free
-variable.
-%
-\begin{lstlisting}[style=haskell,
-    name=inlining,
-    caption={A simultaneous substitution to inline terms}]
-inline :: Term (env, s) t -> Term env s -> Term env t
-inline body bnd = rebuild (subTop bnd) body
-\end{lstlisting}
-%
-The demonic $\forall$ --- which is to say that the quantifier is in a position
-which gives us obligation, not opportunity --- of the operator @v@ forces
-us to respect type: when pattern matching detects the variable we care about,
-happily we discover that it has the type we must respect. The demon is not so
-free to mess with us as one might at first fear.
-
-% Typing rules; each rule types the general usage of a symbol, below the
-% line, in terms of the parameters above the line.??
-
-\subsection{Function composition}
-\label{sec:function_composition}
-
-The equivalent of unary function composition @(.)@ on terms can be
-defined in a similar manner. A function @(a -> b)@ is equivalent to a
-@Term@ of type @b@ and free variable @a@. Similar to inlining, we
-replace an expression that uses the top variable with one that uses another,
-remembering to bind the result of the first expression so that it can be reused
-in the second without duplication.
-%
-\begin{lstlisting}[style=haskell
-    ,name=function_composition
-    ,caption={[A simultaneous substitution to compose unary function terms]}]
-dot :: Term (env, b) c -> Term (env, a) b -> Term (env, a) c
-dot f g = Let g (rebuild split f)
-  where
-    split :: Idx (env, b) c -> Term ((env, a), b) c
-    split ZeroIdx      = Var ZeroIdx
-    split (SuccIdx ix) = Var (SuccIdx (SuccIdx ix))
-\end{lstlisting}
-%
-Note the type of @split@, where we needed to create space in the
-environment at the second index (@SuccIdx ZeroIdx@) for the free variable
-@a@ to appear in the resultant @Term@, as the first index will be
-bound to the result of the first expression @g@.
-
-We lift this to function terms by unwrapping the lambda abstractions.
-Annoyingly, GHC's type checker can not determine that the function type
-prohibits any valid term except those with a single lambda, so we need a second
-catch-all case to suppress a compilation warning. In future we elide the
-impossible cases for brevity.
-%
-\begin{lstlisting}[style=haskell,
-    name=function_composition,
-    caption={A simultaneous substitution to compose unary function terms}]
-compose :: Fun env (b -> c) -> Fun env (a -> b) -> Fun env (a -> c)
-compose (Lam (Body f)) (Lam (Body g)) = Lam (Body (f `dot` g))
-compose _              _              = error "compose: impossible case"
-\end{lstlisting}
-
-
-\section{Environment Manipulation}
-\label{sec:environment_manipulation}
-\marginnote{tk: into implementation chapter?}
-
-As part of the fusion transformation of recasting terms we often need to lift
-array valued inputs to be let-bound at higher points to avoid work duplication,
-but at the same time we can not immediately add these bindings to the output
-term because they will interfere with further fusion steps. We need to collect
-these extra bindings separately from the main term, and add them to the output
-term at some later point. Furthermore, we must ensure we correctly track the
-types of the environments between the fused terms and the collected
-let-bindings.
-
-The following is a heterogeneous snoc-list of array terms that witnesses how an
-array environment is extended by the application of these operations:
-%
-\begin{lstlisting}[
-    style=haskell,
-    label={lst:Extend},
-    caption={Extending an array environment}]
-data Extend acc aenv aenv' where
-  BaseEnv :: Extend acc aenv aenv
-  PushEnv :: Arrays a
-          => Extend acc aenv aenv' -> PreOpenAcc acc aenv' a -> Extend acc aenv (aenv', a)
-\end{lstlisting}
-%
-In the style of the \indext{de Bruijn} indices used for projecting environment
-variables (\S TK), @Extend@ uses an inductive notion of tuples as
-heterogeneous \emph{snoc} lists. In contrast to environment indices, the base
-case does not refer to an empty environment, but instead the environment
-@aenv@ which we are extending. This witnesses how to construct an extended
-environment @aenv'@ by bringing new terms into scope, one at a time.
-%
-\begin{lstlisting}[style=haskell]
-bind :: Arrays a => Extend acc aenv aenv' -> PreOpenAcc acc aenv' a -> PreOpenAcc acc aenv a
-bind BaseEnv         = id
-bind (PushEnv env a) = bind env . Alet (inject a) . inject
-\end{lstlisting}
-
-
-\subsection{Sinking}
-\label{sec:sinking}
-
-We define \emph{sinking} as the operation of shifting a term from one (array)
-environment into another, where new things have come into scope according to
-some witness, and no old things have disappeared.
-%
-\begin{lstlisting}[style=haskell,
-    name=sinking,
-    caption={Sinking terms to a larger environment}]
-type env :> env' = forall t'. Idx env t' -> Idx env' t'
-
-class Sink f where
-  weaken :: env :> env' -> f env t -> f env' t
-
-instance Sink Idx
-instance Sink (PreOpenExp acc env)
-instance Sink (PreOpenAcc acc)
-  ...
-\end{lstlisting}
-%
-This generalises @weaken@ from section~\ref{sec:substitution} to increase
-the environment of an object @f@ based on some function on indices rather
-than shifting by a single \indext{de Bruijn} index. Thus we only need to
-traverse a term once no matter how many positions the variable indices shift by.
-Using this, we can weaken terms based on the witness provided by
-@Extend@.
-%
-\begin{lstlisting}[style=haskell,name=sinking]
-sink :: Sink f => Extend acc env env' -> f env t -> f env' t
-sink env = weaken (k env)
-  where
-    k :: Extend acc env env' -> Idx env t -> Idx env' t
-    k BaseEnv       = id
-    k (PushEnv e _) = SuccIdx . k e
-
-sink1 :: Sink f => Extend acc env env' -> f (env, s) t -> f (env', s) t
-sink1 = ...
-\end{lstlisting}
-
-
-\section{Implementing Array Fusion}
+\section{Implementing array fusion}
 \label{sec:implementing_array_fusion}
 
 Section~\ref{sec:fusion} outlined the basic approach to fusion. To reiterate, we
